--- a/time-converter.html
+++ b/time-converter.html
@@ -7,10 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-    <script src="from firbas.js"></script>
-    
+<script>
+let time = prompt()
+let splat = time.split(':')
+let epoch = Number(splat[1]) + Number(splat[0]) * 60
+//console.log(epoch)
+let epok = time*60
+console.log(epok)
+
+</script>
 </body>
 </html>
