--- a/TemperaturProjektet/Main files/Contact.html
+++ b/TemperaturProjektet/Main files/Contact.html
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <h2 class="contactInfo">Contact info:</h2>
+    <h1 class="contactInfo">Contact info:</h1>
     <div class="contacts">
         <!-- Axel Roxenborg -->
         <div id="contacts" class="roxContact">
@@ -79,23 +79,23 @@
     <script>
         function copyEmail1() {
             navigator.clipboard.writeText("axel.roxenborg@abbgymnasiet.se");
-            alert("Copied Axel's mail to the clipboard");
+            alert("Copied Axel's mail to the clipboard successfully!");
         }
         function copyEmail2() {
             navigator.clipboard.writeText("oliver.sarebro@abbgymnasiet.se");
-            alert("Copied Oliver's mail to the clipboard");
+            alert("Copied Oliver's mail to the clipboard successfully!");
         }
         function copyEmail3() {
             navigator.clipboard.writeText("andreas.sananes@abbgymnasiet.se");
-            alert("Copied Andreas mail to the clipboard");
+            alert("Copied Andreas mail to the clipboard successfully!");
         }
         function copyEmail4() {
             navigator.clipboard.writeText("axel.rosenberg@abbgymnasiet.se");
-            alert("Copied Axel's mail to the clipboard");
+            alert("Copied Axel's mail to the clipboard successfully!");
         }
         function copyEmail5() {
             navigator.clipboard.writeText("kevin.nedell@abbgymnasiet.se");
-            alert("Copied Kevin's mail to the clipboard");
+            alert("Copied Kevin's mail to the clipboard successfully!");
         }
     </script>
 </body>
