--- a/TemperaturProjektet/Main files/About.html
+++ b/TemperaturProjektet/Main files/About.html
@@ -29,50 +29,51 @@
     </div>
   </div>
 
-<div id="box">
-  <h1 class="title">
-    <strong>
-    TemperaturProjektet - I hetaste laget
-    </strong>
-  </h1>
-  <br>
-  <div class="aboutProject">
-    <p>Projektet <strong>"I hetaste laget"</strong> går ut på att mäta temperatur och luftfuktighet i olika rum och lagra datan i en databas. Databasen vi har använt oss av är Realtime Database i Firebase. Datan ska från databasen skickas till hemsidan. Vi har i Basgrupp 5 valt att presentera datan i en graf. Man kan välja om man vill se datan för fuktighet eller temperatur. Temperaturen och luftfuktigheten har mätts under ett dygn med intervall på en minut. Med hjälp av de praktiska inmatnings-rutorna kan man enkelt matan in de tidpunkter man vill se temperatur/luftfuktighet mellan.</p>
+  <div id="box">
+    <h1 class="title">
+      <strong>
+      TemperaturProjektet - I hetaste laget
+      </strong>
+    </h1>
+    <br>
+    <div class="aboutProject">
+      <p>Projektet <strong>"I hetaste laget"</strong> går ut på att mäta temperatur och luftfuktighet i olika rum och lagra datan i en databas. Databasen vi har använt oss av är Realtime Database i Firebase. Datan ska från databasen skickas till hemsidan. Vi har i Basgrupp 5 valt att presentera datan i en graf. Man kan välja om man vill se datan för fuktighet eller temperatur. Temperaturen och luftfuktigheten har mätts under ett dygn med intervall på en minut. Med hjälp av de praktiska inmatnings-rutorna kan man enkelt matan in de tidpunkter man vill se temperatur/luftfuktighet mellan.</p>
+    </div>
   </div>
 
-  <h2 id="contactInfo">Contact info:</h2>
+    <h2 id="contactInfo">Contact us:</h2>
     <div class="contacts">
         <!-- Axel Roxenborg -->
         <div class="contact" id="roxContact">
-            <p>Axel Roxenborg</p>
+            <p><strong>Axel Roxenborg</strong></p>
             <p class="contributions"><b>The Graph</b> Javascript &amp; HTML</p>
             <button class="copyEmail" onclick="copyEmail1()">Copy Email</button>
         </div>
         <!-- Oliver Sarebro -->
         <div class="contact" id="oliContact">
-            <p>Oliver Sarebro</p>
+            <p><strong>Oliver Sarebro</strong></p>
             <p class="contributions"><b>Website</b> CSS &amp; HTML</p>
             <button class="copyEmail" onclick="copyEmail2()">Copy Email</button>
         </div>
         <!-- Andreas Sananes -->
         <div class="contact" id="andContact">
-            <p>Andreas Sananes</p>
+            <p><strong>Andreas Sananes</strong></p>
             <p class="contributions"><b>Firebase</b> Javascript</p>
             <button class="copyEmail" onclick="copyEmail3()">Copy Email</button>
         </div>
         <!-- Axel Rosenberg -->
         <div class="contact" id="rosContact">
-            <p>Axel Rosenberg</p>
+            <p><strong>Axel Rosenberg</strong></p>
             <p class="contributions"><b>Arduino</b> C++</p>
             <button class="copyEmail" onclick="copyEmail4()">Copy Email</button>
         </div>
         <!-- Kevin Nedell -->
         <div class="contact" id="kevContact">
-            <p>Kevin Nedell</p>
+            <p><strong>Kevin Nedell</strong></p>
             <p class="contributions"><b>Member</b></p>
             <button class="copyEmail" onclick="copyEmail5()">Copy Email</button>
         </div>
-    </div>
+      </div>
 
     <script>
         function copyEmail1() {
