--- a/TemperaturProjektet/Main files/About.html
+++ b/TemperaturProjektet/Main files/About.html
@@ -47,31 +47,31 @@
         <div class="contact" id="roxContact">
             <p><strong>Axel Roxenborg</strong></p>
             <p class="contributions"><b>The Graph</b> Javascript &amp; HTML</p>
-            <button class="copyEmail" onclick="copyEmail1()">Copy Email</button>
+            <button class="copyEmail" onclick="copyEmail1()">Get Email</button>
         </div>
         <!-- Oliver Sarebro -->
         <div class="contact" id="oliContact">
             <p><strong>Oliver Sarebro</strong></p>
             <p class="contributions"><b>Website</b> CSS &amp; HTML</p>
-            <button class="copyEmail" onclick="copyEmail2()">Copy Email</button>
+            <button class="copyEmail" onclick="copyEmail2()">Get Email</button>
         </div>
         <!-- Andreas Sananes -->
         <div class="contact" id="andContact">
             <p><strong>Andreas Sananes</strong></p>
             <p class="contributions"><b>Firebase</b> Javascript</p>
-            <button class="copyEmail" onclick="copyEmail3()">Copy Email</button>
+            <button class="copyEmail" onclick="copyEmail3()">Get Email</button>
         </div>
         <!-- Axel Rosenberg -->
         <div class="contact" id="rosContact">
             <p><strong>Axel Rosenberg</strong></p>
             <p class="contributions"><b>Arduino</b> C++</p>
-            <button class="copyEmail" onclick="copyEmail4()">Copy Email</button>
+            <button class="copyEmail" onclick="copyEmail4()">Get Email</button>
         </div>
         <!-- Kevin Nedell -->
         <div class="contact" id="kevContact">
             <p><strong>Kevin Nedell</strong></p>
             <p class="contributions"><b>Member</b></p>
-            <button class="copyEmail" onclick="copyEmail5()">Copy Email</button>
+            <button class="copyEmail" onclick="copyEmail5()">Get Email</button>
         </div>
       </div>
 
