--- a/TemperaturProjektet/Main files/Settings.html
+++ b/TemperaturProjektet/Main files/Settings.html
@@ -32,27 +32,27 @@
   <h1 class="settings">Settings</h1>
   <form class="settings">
     <label>Sensor1 Name:<br />
-    <input type="text" id="sensor1Value"/></label>
+    <input type="text" class="sensorInput" id="sensor1Value"/></label>
   </form>
   <br>
   <form class="settings">
     <label>Sensor2 Name:<br />
-    <input type="text" id="sensor2Value"/></label>
+    <input type="text" class="sensorInput" id="sensor2Value"/></label>
   </form>
   <br>
   <form class="settings">
     <label>Sensor3 Name:<br />
-    <input type="text" id="sensor3Value"/></label>
+    <input type="text" class="sensorInput" id="sensor3Value"/></label>
   </form>
   <br>
   <form class="settings">
     <label>Sensor4 Name:<br />
-    <input type="text" id="sensor4Value"/></label>
+    <input type="text" class="sensorInput" id="sensor4Value"/></label>
   </form>
   <br>
   <form class="settings">
     <label>Sensor5 Name:<br />
-    <input type="text" id="sensor5Value"/></label>
+    <input type="text" class="sensorInput" id="sensor5Value"/></label>
   </form>
   <br>
   <input class="settings" type="submit" value="Save" onclick="getData()">
