--- a/TemperaturProjektet/Main files/About.html
+++ b/TemperaturProjektet/Main files/About.html
@@ -11,7 +11,7 @@
     window.location.href = "Settings.html"
   }
   function aboutUsPage(){
-    window.location.href = "About.html";
+    window.location.href = "About.html";    // :)
   } 
 
   function theGraphPage(){
