--- a/TemperaturProjektet/Main files/Graph.html
+++ b/TemperaturProjektet/Main files/Graph.html
@@ -92,8 +92,9 @@
     <div class="filler"></div> 
   </div>
   <footer>
-
+    <p class="image-source">Image: "Framtida Finnslätten"</p>
   </footer>
+
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
   <script src="Graph.js"></script>
