inline button functions

--- a/TemperaturProjektet/Main files/Graph.html
+++ b/TemperaturProjektet/Main files/Graph.html
@@ -64,27 +64,27 @@
 
       <div id="sensorButtonsDiv">
         <label class="switch1" id="S1Label">
-          <input type="checkbox" id="S1">
+          <input type="checkbox" id="S1" onchange="S1Style()">
         <span class="sensorSpan">S1</span>
         </label>
 
         <label class="switch2" id="S2Label">
-          <input type="checkbox" id="S2">
+          <input type="checkbox" id="S2" onchange="S2Style()">
         <span class="sensorSpan">S2</span>
         </label>
 
         <label class="switch1" id="S3Label">
-          <input type="checkbox" id="S3">
+          <input type="checkbox" id="S3" onchange="S3Style()">
         <span class="sensorSpan">S3</span>
         </label>
 
         <label class="switch2" id="S4Label">
-          <input type="checkbox" id="S4">
+          <input type="checkbox" id="S4" onchange="S4Style()">
         <span class="sensorSpan">S4</span>
         </label>
 
         <label class="switch1" id="S5Label">
-          <input type="checkbox" id="S5">
+          <input type="checkbox" id="S5" onchange="S5Style()">
         <span class="sensorSpan">S5</span>
         </label>
       </div>
