--- a/TemperaturProjektet/Main files/Graph.html
+++ b/TemperaturProjektet/Main files/Graph.html
@@ -63,27 +63,27 @@
       </form>
 
       <div id="sensorButtonsDiv">
-        <label class="switch1" id="S1Label">
+        <label class="sensorButton1" id="S1Label">
           <input type="checkbox" id="S1" onchange="S1Style()">
         <span class="sensorSpan">S1</span>
         </label>
 
-        <label class="switch2" id="S2Label">
+        <label class="sensorButton2" id="S2Label">
           <input type="checkbox" id="S2" onchange="S2Style()">
         <span class="sensorSpan">S2</span>
         </label>
 
-        <label class="switch1" id="S3Label">
+        <label class="sensorButton1" id="S3Label">
           <input type="checkbox" id="S3" onchange="S3Style()">
         <span class="sensorSpan">S3</span>
         </label>
 
-        <label class="switch2" id="S4Label">
+        <label class="sensorButton2" id="S4Label">
           <input type="checkbox" id="S4" onchange="S4Style()">
         <span class="sensorSpan">S4</span>
         </label>
 
-        <label class="switch1" id="S5Label">
+        <label class="sensorButton1" id="S5Label">
           <input type="checkbox" id="S5" onchange="S5Style()">
         <span class="sensorSpan">S5</span>
         </label>
