--- a/TemperaturProjektet/Main files/About.html
+++ b/TemperaturProjektet/Main files/About.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>I Hetaste Laget - About us</title>
+<title>About - I Hetaste Laget</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="Navigation.css">
 <link rel="stylesheet" href="About.css">
 </head>
 <body>
+  <img class="background" src="Vasteras_Finnslatten_Markperspektiv_190703_utan_logga_ALV_EJ-FRI-ANV-2048x1024-1.jpg" alt="backG">
   <div id="navBar">
     <button id="iHetasteLaget"><strong>I Hetaste Laget</strong></button>
     <div id="navButtonsDiv">
-      <button class="navButton" id="navTheGraph" onclick="theGraphPage()">The Graph</button>
-      <button class="navButton" id="navAboutUs" onclick="aboutUsPage()">About Us</button>
+      <button class="navButton" id="navTheGraph" onclick="theGraphPage()">Graph</button>
+      <button class="navButton" id="navTheAbout" onclick="theAboutPage()">About</button>
       <button class="navButton" id="navTheSettings" onclick="theSettingsPage()">Settings</button>
     </div>
   </div>
@@ -61,5 +62,6 @@
         </div>
       </div>
       <script src="About.js"></script>
+      <script src="Navigation.js"></script>
 </body>
 </html>
