--- a/TemperaturProjektet/Main files/Graph.html
+++ b/TemperaturProjektet/Main files/Graph.html
@@ -8,20 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>I Hetaste Laget - Graph</title>
-  <script>
-    function theSettingsPage(){
-      window.location.href = "Settings.html"
-    }
-
-    function aboutUsPage(){
-      window.location.href = "About.html";
-    } 
-    
-    function theGraphPage(){
-      window.location.href = "Graph.html"
-    }
-  </script>
+  <title>Graph - I Hetaste Laget</title>
 </head>
 
 <body> 
@@ -29,8 +16,8 @@
   <div id="navBar">
     <button id="iHetasteLaget"><strong>I Hetaste Laget</strong></button>
     <div id="navButtonsDiv">
-      <button class="navButton" id="navTheGraph" onclick="theGraphPage()">The Graph</button>
-      <button class="navButton" id="navAboutUs" onclick="aboutUsPage()">About Us</button>
+      <button class="navButton" id="navTheGraph" onclick="theGraphPage()">Graph</button>
+      <button class="navButton" id="navTheAbout" onclick="theAboutPage()">About</button>
       <button class="navButton" id="navTheSettings" onclick="theSettingsPage()">Settings</button>
     </div>
   </div>
@@ -98,6 +85,6 @@
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
   <script src="Graph.js"></script>
-  <!-- <script src="Settings.js"></script> -->
+  <script src="Navigation.js"></script>
 </body>
 </html>
