--- a/TemperaturProjektet/Main files/Settings.html
+++ b/TemperaturProjektet/Main files/Settings.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>I Hetaste Laget - Settings</title>
+<title>Settings - I Hetaste Laget</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="Navigation.css">
 <link rel="stylesheet" href="Settings.css">
-<script>
-  function theSettingsPage(){
-    window.location.href = "Settings.html"
-  }
-  function aboutUsPage(){
-    window.location.href = "About.html";
-  } 
-
-  function theGraphPage(){
-    window.location.href = "Graph.html"
-  }
-</script>
 </head>
 
 <body>
+  <img class="background" src="Vasteras_Finnslatten_Markperspektiv_190703_utan_logga_ALV_EJ-FRI-ANV-2048x1024-1.jpg" alt="backG">
   <div id="navBar">
     <button id="iHetasteLaget"><strong>I Hetaste Laget</strong></button>
     <div id="navButtonsDiv">
-      <button class="navButton" id="navTheGraph" onclick="theGraphPage()">The Graph</button>
-      <button class="navButton" id="navAboutUs" onclick="aboutUsPage()">About Us</button>
+      <button class="navButton" id="navTheGraph" onclick="theGraphPage()">Graph</button>
+      <button class="navButton" id="navTheAbout" onclick="theAboutPage()">About</button>
       <button class="navButton" id="navTheSettings" onclick="theSettingsPage()">Settings</button>
     </div>
   </div>
@@ -55,6 +44,7 @@
     <input type="text" class="sensorInput" id="sensor5Value"/></label>
   </form>
   <br>
-  <input class="settings" type="submit" value="Save" onclick="getData()">
+  <input class="settings" id="saveSensorNames" type="submit" value="Save" onclick="getData()">
   <script src="Settings.js"></script>
+  <script src="Navigation.js"></script>
 </body>
