--- a/TemperaturProjektet/Main files/Graph.html
+++ b/TemperaturProjektet/Main files/Graph.html
@@ -46,7 +46,7 @@
             <input type="text" id="stopTime" value="">
           </div>
         </div>
-        <input type="reset" id="refreshButton" value="" onclick="refreshFunction()">
+        <input type="button" id="refreshButton" value="" onclick="refreshFunction()">
       </form>
 
       <div id="sensorButtonsDiv">
