--- a/TemperaturProjektet/Main files/Settings.html
+++ b/TemperaturProjektet/Main files/Settings.html
@@ -18,33 +18,35 @@
       <button class="navButton" id="navTheSettings" onclick="theSettingsPage()">Settings</button>
     </div>
   </div>
-  <h1 class="settings">Settings</h1>
-  <form class="settings">
-    <label>Sensor1 Name:<br />
-    <input type="text" class="sensorInput" id="sensor1Value"/></label>
-  </form>
-  <br>
-  <form class="settings">
-    <label>Sensor2 Name:<br />
-    <input type="text" class="sensorInput" id="sensor2Value"/></label>
-  </form>
-  <br>
-  <form class="settings">
-    <label>Sensor3 Name:<br />
-    <input type="text" class="sensorInput" id="sensor3Value"/></label>
-  </form>
-  <br>
-  <form class="settings">
-    <label>Sensor4 Name:<br />
-    <input type="text" class="sensorInput" id="sensor4Value"/></label>
-  </form>
-  <br>
-  <form class="settings">
-    <label>Sensor5 Name:<br />
-    <input type="text" class="sensorInput" id="sensor5Value"/></label>
-  </form>
-  <br>
-  <input class="settings" id="saveSensorNames" type="submit" value="Save" onclick="getData()">
+  <div id="settingsDiv">
+    <h1 class="settings">Settings</h1>
+    <form class="settings">
+      <label class="sensorLabel">Sensor1 Name:<br />
+      <input type="text" class="sensorInput" id="sensor1Value"/></label>
+    </form>
+    <br>
+    <form class="settings">
+      <label class="sensorLabel">Sensor2 Name:<br />
+      <input type="text" class="sensorInput" id="sensor2Value"/></label>
+    </form>
+    <br>
+    <form class="settings">
+      <label class="sensorLabel">Sensor3 Name:<br />
+      <input type="text" class="sensorInput" id="sensor3Value"/></label>
+    </form>
+    <br>
+    <form class="settings">
+      <label class="sensorLabel">Sensor4 Name:<br />
+      <input type="text" class="sensorInput" id="sensor4Value"/></label>
+    </form>
+    <br>
+    <form class="settings">
+      <label class="sensorLabel">Sensor5 Name:<br />
+      <input type="text" class="sensorInput" id="sensor5Value"/></label>
+    </form>
+    <br>
+    <input class="settings" id="saveSensorNames" type="submit" value="Save" onclick="getData()">
+  </div>
   <script src="Settings.js"></script>
   <script src="Navigation.js"></script>
 </body>
