--- a/TemperaturProjektet/Main files/About.html
+++ b/TemperaturProjektet/Main files/About.html
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div id="box">
-    <h1 class="title">
+    <h1 id="title">
       The Temperature Project - "I hetaste laget"
     </h1>
     <br>
