--- a/TemperaturProjektet/Main files/Graph.html
+++ b/TemperaturProjektet/Main files/Graph.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<link rel="stylesheet" href="Graph.css">
-<link rel="stylesheet" href="Website.css">
-<link rel="stylesheet" href="Navigation.css">
+  <!--graph source code-->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!--css docs-->
+  <link rel="stylesheet" href="Graph.css">
+  <link rel="stylesheet" href="Website.css">
+  <link rel="stylesheet" href="Navigation.css">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +13,9 @@
   <title>Graph - I Hetaste Laget</title>
 </head>
 <body> 
+  <!--background image-->
   <img class="background" src="Vasteras_Finnslatten_Markperspektiv_190703_utan_logga_ALV_EJ-FRI-ANV-2048x1024-1.jpg" alt="backG">
-  <!--header-->
+  <!--page switcher-->
   <div id="navBar">
     <button id="iHetasteLaget"><strong>I Hetaste Laget</strong></button>
     <div id="navButtonsDiv">
@@ -22,7 +25,7 @@
     </div>
   </div>
   <div id="graphBody">
-    <!--temp/hum selector-->
+    <!--temp/hum graph selector-->
     <div id="graphSwitcherDiv">
       <button class="tempButton" id="temp" onclick="tempFunction(); tempStyle()"><strong>Temperature</strong></button>
       <button class="humButton" id="hum" onclick="humFunction(); humStyle()"><strong>Humidity</strong></button>
@@ -30,8 +33,9 @@
     <div id="centre">
       <!--the graph-->
       <div id="myPlot"></div>
-      <!--time selector and refresh button-->
+      <!--time selectors and refresh button-->
       <form id="timeDivDiv">
+        <!--just time selectors-->
         <div id="timeDiv">
           <div id="startTimeDiv">
             <label for="fname"><strong>Start Time:</strong></label>
@@ -46,7 +50,7 @@
         </div>
         <input type="button" id="refreshButton" value="" onclick="refreshFunction()">
       </form>
-      <!--sensor selector-->
+      <!--selecting which graphs to show-->
       <div id="sensorButtonsDiv">
         <label class="sensorButton1" id="S1Label">
           <input type="checkbox" id="S1" onchange="S1Style()">
@@ -70,14 +74,16 @@
         </label>
       </div>
     </div>
+    <!--empty space, right side-->
     <div class="filler"></div> 
   </div>
   <footer>
     <p class="image-source">Image: "Framtida Finnslätten"</p>
   </footer>
-  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-  <script src="Graph.js"></script>
-  <script src="Navigation.js"></script>
+    <!--javascript-->
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+    <script src="Graph.js"></script>
+    <script src="Navigation.js"></script>
 </body>
 </html>
