--- a/TemperaturProjektet/Main files/About.html
+++ b/TemperaturProjektet/Main files/About.html
@@ -45,9 +45,9 @@
           <p class="contributions"><b>Website</b><br>CSS &amp; HTML</p>
           <button class="copyEmail" onclick="copyEmail2()">Get Email</button>
       </div>
-      <!-- Andreas Sananes -->
+      <!-- Andreas Sananés -->
       <div class="contact" id="andContact">
-          <p><strong>Andreas Sananes</strong></p>
+          <p><strong>Andreas Sananés</strong></p>
           <p class="contributions"><b>Firebase</b><br>Javascript</p>
           <button class="copyEmail" onclick="copyEmail3()">Get Email</button>
       </div>
