--- a/TemperaturProjektet/Main files/About.html
+++ b/TemperaturProjektet/Main files/About.html
@@ -60,7 +60,7 @@
       <!-- Kevin Nedell -->
       <div class="contact" id="kevContact">
           <p><strong>Kevin Nedell</strong></p>
-          <p class="contributions"><b></b><br></p>
+          <p class="contributions"><b>Various</b><br></p>
           <button class="copyEmail" onclick="copyEmail5()">Get Email</button>
       </div>
     </div>
