--- a/TemperaturProjektet/Main files/About.html
+++ b/TemperaturProjektet/Main files/About.html
@@ -28,7 +28,7 @@
     <br>
     <!--info text-->
     <div id="aboutProject">
-      <p>Projektet <strong>"I hetaste laget"</strong> går ut på att mäta temperatur och luftfuktighet i olika rum och lagra datan i en databas. Databasen vi har använt oss av är Realtime Database i Firebase. Datan ska från databasen skickas till hemsidan. Vi har i Basgrupp 5 valt att presentera datan i en graf. Man kan välja om man vill se datan för fuktighet eller temperatur. Temperaturen och luftfuktigheten har mätts under ett dygn med intervall på en minut. Med hjälp av de praktiska inmatnings-rutorna kan man enkelt matan in de tidpunkter man vill se temperatur/luftfuktighet mellan.</p>
+      <p>Projektet <strong>"I hetaste laget"</strong> går ut på att mäta temperatur och luftfuktighet i olika rum och lagra datan i en databas. Databasen vi har använt oss av är Realtime Database i Firebase. Datan ska från databasen skickas till hemsidan. Vi har i Basgrupp 5 valt att presentera datan i en graf. Man kan välja om man vill se datan för luftfuktighet eller temperatur. Temperaturen och luftfuktigheten har mätts under en eftermiddag med intervall på en minut. Med hjälp av de praktiska inmatnings-rutorna kan man enkelt matan in de tidpunkter man vill se temperatur/luftfuktighet mellan.</p>
     </div>
   </div>
   <div id="contacts">
@@ -59,7 +59,7 @@
       <!-- Kevin Nedell -->
       <div class="contact" id="kevContact">
           <p><strong>Kevin Nedell</strong></p>
-          <p class="contributions"><b>Various</b><br></p>
+          <p class="contributions"><b>Various</b><br><br></p>
           <button class="copyEmail" onclick="copyEmail5()">Get Email</button>
       </div>
     </div>
