--- a/TemperaturProjektet/Main files/About.html
+++ b/TemperaturProjektet/Main files/About.html
@@ -35,7 +35,7 @@
       <!-- Axel Roxenborg -->
       <div class="contact" id="roxContact">
           <p><strong>Axel Roxenborg</strong></p>
-          <p class="contributions"><b>The Graph</b><br>Javascript &amp; HTML</p>
+          <p class="contributions"><b>The Graph</b><br>JavaScript &amp; HTML</p>
           <button class="copyEmail" onclick="copyEmail1()">Get Email</button>
       </div>
       <!-- Oliver Sarebro -->
@@ -47,7 +47,7 @@
       <!-- Andreas Sananés -->
       <div class="contact" id="andContact">
           <p><strong>Andreas Sananés</strong></p>
-          <p class="contributions"><b>Firebase</b><br>Javascript</p>
+          <p class="contributions"><b>Firebase</b><br>JavaScript</p>
           <button class="copyEmail" onclick="copyEmail3()">Get Email</button>
       </div>
       <!-- Axel Rosenberg -->
